# flare

./: .gitignore  .travis.yml  AUTHORS  COMMAND_MANUAL.md  COPYRIGHT  ChangeLog  Dockerfile  Makefile.am  Makefile.in  NEWS  README  README.md  USAGE.md  autogen.sh  circle.yml  configure.ac  cutter.patch  default.nix  flake.nix  flare-tests.patch  index.html  params.json  shell.nix
.github/disabled-workflows/: nix-macos.yml
.github/workflows/: nix-linux.yml  nix-macos.yml
debian/: changelog  control  copyright  init.d  rules
doc/: flare.doxyegn
etc/: flared.conf  flarei.conf
files/: flare-1.0.0.tgz  flare-1.0.1.tgz  flare-1.0.10.tgz  flare-1.0.11.tgz  flare-1.0.12.tgz  flare-1.0.16.1.tgz  flare-1.0.16.tgz  flare-1.0.2.tgz  flare-1.0.3.tgz  flare-1.0.4.tgz  flare-1.0.5.tgz  flare-1.0.6.tgz  flare-1.0.7.tgz  flare-1.0.8.tgz  flare-1.0.9.tgz  flare_1.0.0-1_amd64.deb  flare_1.0.0-1_i386.deb  flare_1.0.1-1_amd64.deb  flare_1.0.1-1_i386.deb  flare_1.0.10-1_amd64.deb  flare_1.0.10-1_i386.deb  flare_1.0.11-1_amd64.deb  flare_1.0.11-1_i386.deb  flare_1.0.12-1_amd64.deb  flare_1.0.12-1_i386.deb  flare_1.0.16-1~squeeze_amd64.deb  flare_1.0.16-1~squeeze_i386.deb  flare_1.0.16-2~squeeze_amd64.deb  flare_1.0.16-2~squeeze_i386.deb  flare_1.0.17-1+squeeze1_amd64.deb  flare_1.0.17-1+squeeze1_i386.deb  flare_1.0.17-2+squeeze1_amd64.deb  flare_1.0.17-2+squeeze1_i386.deb  flare_1.0.18-1+lenny1_amd64.deb  flare_1.0.18-1+lenny1_i386.deb  flare_1.0.18-1+squeeze1_amd64.deb  flare_1.0.18-1+squeeze1_i386.deb  flare_1.0.18-2+lenny1_amd64.deb  flare_1.0.18-2+lenny1_i386.deb  flare_1.0.18-2+squeeze1_amd64.deb  (+37 more)
nix/: cutter.nix  default.nix  emacs.nix  shell.nix
package/flare/debian/: changelog  conffiles  control  copyright  default  init.d  rules
package/flare/lenny/debian/: changelog  control  init.d  rules
package/flare/squeeze/debian/: control  default  install
package/tokyocabinet/debian/: README.Debian  changelog  control  copyright  rules  tokyocabinet-dev.files
sample/: flared-1.conf  flared-2.conf  flared-3.conf  flarei.conf
scripts/: flarea  setup_flare.sh
src/: .gitignore  Makefile.am  config.h.in
src/flared/: .gitignore  Makefile.am  flared.cc  flared.h  handler_alarm.cc  handler_alarm.h  handler_mysql_replication.cc  handler_mysql_replication.h  handler_request.cc  handler_request.h  ini_option.cc  ini_option.h  op_parser_binary_node.cc  op_parser_binary_node.h  op_parser_text_node.cc  op_parser_text_node.h  op_show_node.cc  op_show_node.h  op_stats_node.cc  op_stats_node.h  show_node.cc  show_node.h  stats_node.cc  stats_node.h  status_node.cc  status_node.h
src/flarefs/: Makefile.am  flarefs.cc  flarefs.h  fuse_fs.cc  fuse_fs.h  fuse_fs_entry.cc  fuse_fs_entry.h  fuse_fs_entry_dir.cc  fuse_fs_entry_dir.h  fuse_fs_entry_file.cc  fuse_fs_entry_file.h  fuse_impl.cc  fuse_impl.h  ini_option.cc  ini_option.h
src/flarei/: .gitignore  Makefile.am  flarei.cc  flarei.h  handler_alarm.cc  handler_alarm.h  handler_request.cc  handler_request.h  ini_option.cc  ini_option.h  op_parser_binary_index.cc  op_parser_binary_index.h  op_parser_text_index.cc  op_parser_text_index.h  op_show_index.cc  op_show_index.h  op_stats_index.cc  op_stats_index.h  stats_index.cc  stats_index.h  status_index.cc  status_index.h
src/flarem/: Makefile.am  flarem.cc  flarem.h  handler_request.cc  handler_request.h  ini_option.h  op_parser_binary_manager.cc  op_parser_binary_manager.h  op_parser_text_manager.cc  op_parser_text_manager.h  op_stats_manager.cc  op_stats_manager.h  stats_manager.cc  stats_manager.h
src/lib/: Makefile.am  abort.h  app.cc  app.h  binary_header.h  binary_network_mapping.h  binary_request_header.h  binary_response_header.h  bwlimitter.cc  bwlimitter.h  client.cc  client.h  cluster.cc  cluster.h  cluster_replication.cc  cluster_replication.h  connection.cc  connection.h  connection_tcp.cc  connection_tcp.h  coordinator.cc  coordinator.h  coordinator_factory.cc  coordinator_factory.h  file_coordinator.cc  file_coordinator.h  handler_cluster_replication.cc  handler_cluster_replication.h  handler_controller.cc  handler_controller.h  handler_dump_replication.cc  handler_dump_replication.h  handler_monitor.cc  handler_monitor.h  handler_proxy.cc  handler_proxy.h  handler_reconstruction.cc  handler_reconstruction.h  htonll.h  ini.cc  (+170 more)
test/: Makefile.am  flare.supp  run-memory-tests.sh  run-test.sh  run-tests.sh  run-tests.travis.sh
test/lib/: Makefile.am  assertions.h  common-storage-tests.cc  common-storage-tests.h  common_connection_tests.cc  common_connection_tests.h  common_storage_tests.cc  common_storage_tests.h  connection_iostream.cc  connection_iostream.h  mock_cluster.cc  mock_cluster.h  mock_op_proxy_write.h  mock_storage.cc  mock_storage.h  storage_listener_simple.h  storage_simple_map.h  test-key-resolver-modular.cc  test-storage-tc.cc  test-storage-tcb.cc  test-storage-tch.cc  test-storage.cc  test-util.cc  test_binary_header.cc  test_cluster.cc  test_cluster_replication.cc  test_connection_iostream.cc  test_connection_tcp.cc  test_connection_tcp.h  test_file_coordinator.cc  test_handler_cluster_replication.cc  test_handler_dump_replication.cc  test_handler_monitor.cc  test_handler_proxy.cc  test_key_resolver_modular.cc  test_op.cc  test_op.h  test_op_add.cc  test_op_append.cc  test_op_cas.cc  (+44 more)
